--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,28 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>questions_and_answers</h1>
-    <hr>
-    <h3>Lista de perguntas</h3>
-
-    <p>Nome: <%= nome %></p> <!--Com o = eu coloco variaveis--> 
-    <p>Linguagem Favorita: <%= lang %></p>
-    <p>Empresa: <%= empresa %></p>
-
-    <% if(msg == true) { %>
-        <h3>Isso é uma mensagem de erro</h3> 
-    <% } else {  %>
-        <h3>Nenhum erro</h3>
-    <% }  %> 
-
-         <% produtos.forEach(function(produto) { %>
-             <%= produto.nome %>
-             <%= produto.preco %>
-             <br>
-             <br> 
-         <% });  %>  <!-- for each significada que para cada elemento de um array ele vai fazer algo  -->
-
+    <h1>Estilo Bootsatrp</h1>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script src="/js/bootstrap.min.js"></script>
 </html>
